syntax = "proto3";

option go_package = "github.com/dominati-one/backend/pkg/protocol/blockchain";

package dominatione.blockchain;

message EventCreatePlanet {
  int64 seed = 1;
}
