syntax = "proto3";

option go_package = "github.com/dominati-one/backend/pkg/protocol/gameapi";

package dominatione.gameapi;

message GetPlanetsRequest {

}