syntax = "proto3";

option go_package = "github.com/dominati-one/backend/pkg/protocol/gameapi";

package dominatione.gameapi;

import "api/protoc/entity/planet.proto";

message GetPlanetsResponse {
  repeated entity.Planet planets = 1;
}