syntax = "proto3";

option go_package = "github.com/dominati-one/backend/pkg/protocol/gameapi";

package dominatione.gameapi;

import "api/protoc/entity/seed.proto";

message GetSeedsResponse {
  repeated entity.Seed seeds = 1;
}